Fix the EOL-indicators ('$') toggled by the `-e' option to be lined up correctly when used in conjunction with the `-b' option; from Giles Lean in PR bin/4841, modified by me to retain the line-counting semantics of `-b'.